# release-notes

./: .gitignore  README.md  _quarto.yml  agents.qmd  backend.qmd  cmvm.qmd  documentation.qmd  feature-highlights.qmd  frontend.qmd  index.qmd  pyproject.toml  styles.css  theme.scss  validmind-library.qmd
.pw-profile/: Local State  first_party_sets.db
.pw-profile/Default/: BrowsingTopicsState  Cookies  DIPS  Favicons  History  Network Action Predictor  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  Top Sites  TransportSecurity  Web Data
.pw-profile/Default/DawnGraphiteCache/: data_1  index
.pw-profile/Default/DawnWebGPUCache/: data_1  index
.pw-profile/Default/Extension Rules/: LOG
.pw-profile/Default/Extension Scripts/: LOG
.pw-profile/Default/Extension State/: LOG  LOG.old
.pw-profile/Default/GPUCache/: data_0  data_1  data_2  index
.pw-profile/Default/Session Storage/: LOG  LOG.old
.pw-profile/Default/Sessions/: Session_13393282805542000  Session_13393282808101337  (+9 more)
.pw-profile/GrShaderCache/: data_1  index
.pw-profile/GraphiteDawnCache/: data_0  data_1  data_2  f_000001  f_000002  index
.pw-profile/ShaderCache/: data_1  index
.pw-profile/segmentation_platform/: ukm_db
releases/: index.qmd
releases-human-edited/: 25_05_04-human-edited.qmd  25_05_06-human-edited.html  25_05_06-human-edited.qmd
releases/cmvm/: 25_05_02.qmd  25_05_04.qmd  25_05_06.qmd  25_06.qmd
scripts/: auth.json  generate_release_notes.py  playwright_github_login.py  playwright_login.py  playwright_test_github_login.py  pyproject.toml
(+881 files in other folders)
